# DemoProject

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
demo/: sample_requests.http
docs/: architecture.md  onboarding.md
docs/decisions/: 001-async-sqlalchemy.md
frontend/: index.html
prompts/: code_review.md  refactor.md  security_review.md  test_generation.md
scripts/: run_local.sh  setup.sh
src/: main.py
src/api/v1/: auth.py  simulate.py  users.py
src/auth/: jwt.py
src/config/: settings.py
src/core/: claude_service.py  user_service.py
src/integrations/: external_client.py
src/models/: user.py
tests/integration/: test_auth_routes.py
tests/unit/: test_jwt.py  test_password.py
